--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "start": "node src/server.js",
     "sync:reddit": "node scripts/ingest-reddit.js",
     "sync:datagov": "node scripts/ingest-datagov.js",
+    "sync:gsa": "node scripts/ingest-gsa-auctions.js",
+    "sync:sam": "node scripts/ingest-sam.js",
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
