--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,14 @@
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "csv-parse": "5.5.6",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "helmet": "7.1.0",
+    "lowdb": "7.0.1",
     "morgan": "1.10.0",
     "node-fetch": "3.3.2",
-    "lowdb": "7.0.1"
+    "node-ical": "0.16.1"
   },
   "devDependencies": {
     "nodemon": "3.1.5"
