--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "sync:datagov": "node scripts/ingest-datagov.js",
     "sync:gsa": "node scripts/ingest-gsa-auctions.js",
     "sync:sam": "node scripts/ingest-sam.js",
+    "sync:govdeals": "node scripts/ingest-govdeals.js",
     "sync:usaspending": "node scripts/ingest-usaspending.js",
     "seed": "node scripts/seed.js",
     "smoke:bootstrap": "node scripts/smoke-bootstrap.js"
@@ -19,6 +20,7 @@
     "csv-parse": "5.5.6",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "fast-xml-parser": "^4.3.2",
     "helmet": "7.1.0",
     "lowdb": "7.0.1",
     "morgan": "1.10.0",
