--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "sync:gsa": "node scripts/ingest-gsa-auctions.js",
     "sync:sam": "node scripts/ingest-sam.js",
     "sync:govdeals": "node scripts/ingest-govdeals.js",
+    "sync:grants": "node scripts/ingest-grants-gov.js",
+    "sync:corporate": "node scripts/ingest-corporate-refresh.js",
     "sync:usaspending": "node scripts/ingest-usaspending.js",
     "seed": "node scripts/seed.js",
     "smoke:bootstrap": "node scripts/smoke-bootstrap.js"
@@ -25,7 +27,8 @@
     "lowdb": "7.0.1",
     "morgan": "1.10.0",
     "node-fetch": "3.3.2",
-    "node-ical": "0.16.1"
+    "node-ical": "0.16.1",
+    "nodemailer": "6.9.13"
   },
   "devDependencies": {
     "nodemon": "3.1.5",
