--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,14 @@
     "smoke:bootstrap": "node scripts/smoke-bootstrap.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "csv-parse": "5.5.6",
     "dotenv": "16.4.5",
     "express": "4.19.2",
     "fast-xml-parser": "^4.3.2",
     "helmet": "7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lowdb": "7.0.1",
     "morgan": "1.10.0",
     "node-fetch": "3.3.2",
