--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "lowdb": "7.0.1",
     "morgan": "1.10.0",
-    "node-fetch": "3.3.2",
+    "node-fetch": "^2.7.0",
     "node-ical": "0.16.1",
     "nodemailer": "6.9.13"
   },
