🔧 Fix Vercel serverless API deployment
- Create api/ directory for Vercel Functions
- Add serverless wrapper for Express app
- Update vercel.json with rewrites
- Fix API routing for production

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,12 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "server/src/server.js",
-      "use": "@vercel/node"
+      "source": "/api/:path*",
+      "destination": "/api"
     }
   ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "server/src/server.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
+
   "env": {
     "NODE_ENV": "production",
     "HTI_REQUIRE_AUTH": "false"
